--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			// Preparar respuesta
 			connection.onreadystatechange = response;
 			// Petición HTTP con GET
-			connection.open('GET', 'http://localhost/appmusicAdrian/public/index.php/users/login.json?username=' + username + '&password=' + userpass);
+			connection.open('GET', 'http://h2744356.stratoserver.net/adrian/appmusicAdrian/public/index.php/users/login.json?username=' + username + '&password=' + userpass);
 			// Cabecera de la petición
 			//connection.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
 			// Envío
