--- a/delete.html
+++ b/delete.html
@@ -2,43 +2,28 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Añadir Canción</title>
+	<title>Borrar una canción</title>
 	<script type="text/javascript">
+		function borrar(){
 
-		function ajax(){
-
-			var titleSong = document.getElementById('title').value;
-			var artistSong = document.getElementById('artist').value;
-			var urlSong = document.getElementById('url').value;
+			var idsong = document.getElementById('idSong').value;
 
 			var token = sessionStorage.getItem('token');
 			// Consola
-			console.log(titleSong);
-			console.log(artistSong);
-			console.log(urlSong);
+			console.log(idsong);
 			console.log(token);
 			// Instanciar el objeto XMLHttpRequest
 			connection = new XMLHttpRequest();
 			// Preparar respuesta
 			connection.onreadystatechange = response;
 			// Petición HTTP con POST
-			connection.open('POST', 'http://h2744356.stratoserver.net/adrian/appmusicAdrian/public/index.php/songs/addSongs.json');
+			connection.open('POST', 'http://h2744356.stratoserver.net/adrian/appmusicAdrian/public/index.php/songs/delete.json');
 			// Cabecera de la petición
 			connection.setRequestHeader('Authorization', token);
 			// Envío
-			//connection.send('title=' + titleSong, 'artist=' + artistSong, 'url=' + urlSong);
-
 			var data = new FormData();
-			data.append('title', titleSong);
-			data.append('artist', artistSong);
-			data.append('url', urlSong);
+			data.append('id', idsong);
 			connection.send(data);
-
-		}
-
-		function gotosongs()
-		{
-			window.location.href = "songs.html";
 		}
 
 		function main()
@@ -68,32 +53,26 @@
 </head>
 <body>
 
-	<h1>Añadir canciones</h1>
+	<h1>Borrar una canción</h1>
 
-	<h2>Aquí puedes añadir nuevas canciones</h2>
+	<h2>Bienvenido admin</h2>
 
 	<a href="javascript:location.reload()">Actualizar</a>
 	<hr>
 
 	<div>
-		<label>Título</label>
-		<input type="text" id="title">
-		<br>
-		<label>Artista</label>
-		<input type="text" id="artist">
-		<br>
-		<label>URL</label>
-		<input type="text" id="url">
-		<hr>
-		<button onclick='ajax()'>Añadir canción</button>
-		<button onclick="gotosongs()">Ver canciones</button>
-		<button onclick='main()'>Volver al Main</button>
+		<label>ID de canción a eliminar</label>
+		<input type="text" id="idSong">
 	</div>
+
+	<button onclick="borrar()">Borrar canción</button>
+	<button onclick='main()'>Volver al Main</button>
 
 	<div id='response'>
 			<p id='code'></p>
 			<p id='message'></p>
 			<p id='data'></p>
 	</div>
+
 </body>
 </html>
