--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 		{
 			window.location.href = "add.html";
 		}
+
+		function logout()
+		{
+			sessionStorage.clear();
+			window.location.href = "index.html";
+		}
+
+		function deleteSong()
+		{
+			window.location.href = "delete.html";
+		}
 	</script>
 </head>
 <body>
@@ -19,8 +30,10 @@
 	<a href="javascript:location.reload()">Actualizar</a>
 	<hr>
 
-	<!--<button>Crear un nuevo usuario</button>-->
 	<button onclick="GoToAdd()">Añadir una canción</button>
+	<button onclick="deleteSong()">Borrar una canción</button>
+
+	<button onclick="logout()">Cerrar Sesión</button>
 
 </body>
 </html>
